# diht-prog-sem4

./: README.md
task1.1/: Readme.md
task1.2/: Readme.md  futex.cpp  mutex.cpp  run.sh
task2.1/: CMakeLists.txt  CSyncContainer.h  testCSyncContainer.cpp
